--- a/Assignment1/report.qmd
+++ b/Assignment1/report.qmd
@@ -1,26 +1,31 @@
-# Report - Problem Statement
+<h1 align="center"> CNN Classification with CIFAR-10 </h1>
+<h3 align="center"> Noah Fuery </h3>
+<h3 align="center"> CPSC 542 - Deep Learning and Computer Vision </h3>
 
-## The Problem to Be Solved
+## Introduction
 
-[Provide a concise description of the problem you are addressing.]
+### Problem to Be Solved
 
-## The Relevance of the Problem
+The goal of this program is to accurately classify natural images using a multi-layered model trained on a specific dataset, CIFAR-10. 
 
-[Explain why the problem is relevant, including any real-world implications.]
+### Relevance of Problem
 
-## The Plan to Solve the Problem
+Being able to classify natural images could lead to benefits in the real world. For example, sightings of endagered or near-extinct animals could be detected through the classifier when processing large amounts of images online, leading to possible better protection of animals.
 
-[Outline your plan to address and solve the problem. Mention any specific goals or milestones.]
+### Plan to Solve Problem
 
-## Justification for a DL Solution
+To solve the problem, a pipeline will be developed that is capable of preprocessing, augmentation, training, prediction, and validation, and uses a CNN-based DNN for classification. This pipeline will be a deep learning solution to classifying natural images and will be able to uniquely classify into 10 classes.
 
-[Explain why a deep learning (DL) solution is necessary or beneficial for solving this problem.]
+### Justification for a DL Solution
 
-# Report - Data
+A random forest classifier was tested on the CIFAR-10 dataset, and the accuracy scores for validation and testing were 0.4 ??? and 0.4 ??? respectively. These scores were very poor in classifying the images from the CIFAR-10 dataset, no matter which hyperparameters were changed. This lead to the conclusion that the random forest classifier was not well-versed enough to solve this problem, and that a deep learning solution was required.
+
+# Data
 
 ## Describing the Data
 
 [Describe the dataset you are working with, including its features, size, and any other relevant information. Summarize key findings from exploratory data analysis (EDA).]
+The CIFAR-10 dataset is 
 
 # Report - Methods (Preprocessing)
 
